--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux-devtools-diff-monitor": "^5.0.5",
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.5",
+    "redux-saga-test-plan": "^2.4.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
@@ -51,7 +52,7 @@
   },
   "dependencies": {
     "react": "^15.4.1",
-    "redux-saga": "^0.13.0",
+    "redux-saga": "^0.14.8",
     "uuid": "^2.0.3"
   }
 }
