--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.6.5",
