--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
-    "react": "^15.4.1",
-    "redux-saga": "^0.14.8",
+    "react": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "uuid": "^2.0.3"
   }
 }
