--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
+    "js-tinyapi": "^0.0.3",
     "react": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
