Publish alpha version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-jam",
-  "version": "0.0.6",
+  "version": "0.1.0-alpha.0",
   "description": "A Redux JSON-API model layer.",
   "repository": {
     "type": "git",
