--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-jam",
-  "version": "0.1.0-alpha.3",
+  "version": "0.1.0-alpha.4",
   "description": "A Redux JSON-API model layer.",
   "repository": {
     "type": "git",
@@ -30,28 +30,34 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
+    "js-tinyapi": "^0.1.0-alpha.3",
     "jsdom": "^8.5.0",
     "jsdom-global": "^1.7.0",
     "mocha": "^3.2.0",
     "mock-css-modules": "^1.0.0",
     "nock": "^9.0.2",
+    "react": "^16.2.0",
     "react-addons-test-utils": "^0.14.8",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "redux-devtools": "^3.1.1",
     "redux-devtools-chart-monitor": "^1.4.1",
     "redux-devtools-diff-monitor": "^5.0.5",
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.5",
+    "redux-saga": "^0.16.0",
     "redux-saga-test-plan": "^2.4.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
+    "uuid": "^2.0.3",
     "webpack": "^1.12.14",
     "webpack-bundle-tracker": "0.0.93",
     "webpack-dev-server": "^1.14.1",
     "webpack-node-externals": "^1.5.4"
   },
-  "dependencies": {
-    "js-tinyapi": "^0.1.0-alpha.2",
+  "peerDependencies": {
+    "js-tinyapi": "^0.1.0-alpha.3",
     "react": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
