Updating the instance tests, and a little refactor

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch": "webpack --config webpack/webpack.config.base.js --progress --colors --watch",
     "watch:prod": "webpack --config webpack/webpack.config.production.js --progress --colors --watch",
     "dev": "node server.js",
-    "test": "mocha --require mock-css-modules --require babel-polyfill --compilers js:babel-register -R nyan --recursive tests/*.js",
+    "test": "mocha --require babel-polyfill --compilers js:babel-register -R nyan --recursive tests/*.js",
     "prepublish": "webpack --config webpack/webpack.config.production.js --progress --colors"
   },
   "author": "Luke Hodkinson",
@@ -21,15 +21,18 @@
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-builtin-extend": "^1.1.2",
     "babel-polyfill": "^6.16.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.6.5",
     "chai": "^3.5.0",
+    "code": "^5.2.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.0",
     "js-tinyapi": "^0.1.0-alpha.3",
     "jsdom": "^8.5.0",
     "jsdom-global": "^1.7.0",
@@ -48,6 +51,7 @@
     "redux-devtools-log-monitor": "^1.0.5",
     "redux-saga": "^0.16.0",
     "redux-saga-test-plan": "^2.4.3",
+    "sinon": "^4.4.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "uuid": "^2.0.3",
