--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-  'presets': ['react', 'env', 'stage-0']
+  "presets": [ "react", "env", "stage-0" ],
+  "plugins": [
+    [ "babel-plugin-transform-builtin-extend", {"globals": ["Error"]} ]
+  ]
 }
