--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "code": "^5.2.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "is-callable": "^1.1.3",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "js-tinyapi": "^0.1.0-alpha.3",
@@ -49,6 +50,7 @@
     "redux-devtools-diff-monitor": "^5.0.5",
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.5",
+    "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
     "redux-saga-test-plan": "^2.4.3",
     "sinon": "^4.4.2",
@@ -61,10 +63,12 @@
     "webpack-node-externals": "^1.5.4"
   },
   "peerDependencies": {
+    "is-callable": "^1.1.3",
     "js-tinyapi": "^0.1.0-alpha.3",
     "react": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
     "uuid": "^2.0.3"
   }
