--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
-  "presets": [ "react", "env", "stage-0" ],
+  "presets": [
+    "react",
+    "env",
+    "stage-0"
+  ],
   "plugins": [
-    [ "babel-plugin-transform-builtin-extend", {"globals": ["Error"]} ]
+    "transform-decorators-legacy"
   ]
 }
