--- a/package.json
+++ b/package.json
@@ -8,27 +8,25 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "build:prod": "webpack --config webpack/webpack.config.production.js --progress --colors",
-    "build": "webpack --config webpack/webpack.config.base.js --progress --colors",
-    "watch": "webpack --config webpack/webpack.config.base.js --progress --colors --watch",
-    "watch:prod": "webpack --config webpack/webpack.config.production.js --progress --colors --watch",
-    "dev": "node server.js",
-    "test": "mocha --require babel-polyfill --compilers js:babel-register -R nyan --recursive tests/*.js",
-    "test:one": "mocha --require babel-polyfill --compilers js:babel-register -R nyan",
-    "prepublish": "webpack --config webpack/webpack.config.production.js --progress --colors"
+    "build": "webpack --mode development --progress --colors",
+    "watch": "webpack --mode development --progress --colors --watch",
+    "build:prod": "webpack --mode production --progress --colors",
+    "watch:prod": "webpack --mode production --progress --colors --watch",
+    "test": "mocha --require babel-polyfill --require mock-local-storage --compilers js:babel-register -R nyan --recursive tests/*.js",
+    "test:one": "mocha --require babel-polyfill --require mock-local-storage --compilers js:babel-register -R nyan",
+    "prepublish": "webpack --mode production --progress --colors"
   },
   "author": "Luke Hodkinson",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.3.26",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-polyfill": "^6.16.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.6.5",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "^3.5.0",
     "code": "^5.2.0",
     "css-loader": "^0.23.1",
@@ -43,6 +41,7 @@
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "immutable": "^3.8.2",
     "is-callable": "^1.1.3",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
@@ -51,8 +50,10 @@
     "jsdom-global": "^1.7.0",
     "mocha": "^3.2.0",
     "mock-css-modules": "^1.0.0",
+    "mock-local-storage": "^1.0.5",
     "moment": "^2.21.0",
     "nock": "^9.0.2",
+    "peer-deps-externals-webpack-plugin": "^1.0.2",
     "react": "^16.2.0",
     "react-addons-test-utils": "^0.14.8",
     "react-hot-loader": "^1.3.0",
@@ -70,12 +71,12 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "uuid": "^2.0.3",
-    "webpack": "^1.12.14",
-    "webpack-bundle-tracker": "0.0.93",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-node-externals": "^1.5.4"
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   },
   "peerDependencies": {
+    "immutable": "^3.8.2",
     "is-callable": "^1.1.3",
     "js-tinyapi": "^0.1.0-alpha.3",
     "react": "^16.2.0",
@@ -84,8 +85,5 @@
     "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
     "uuid": "^2.0.3"
-  },
-  "dependencies": {
-    "immutable": "^3.8.2"
   }
 }
