--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^3.5.0",
+    "clean-webpack-plugin": "^0.1.19",
     "code": "^5.2.0",
     "css-loader": "^0.23.1",
     "eslint": "^4.9.0",
