--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "clean-webpack-plugin": "^0.1.19",
     "code": "^5.2.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^3.3.0",
+    "enzyme-redux": "^0.2.1",
     "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-standard-react": "^5.0.0",
@@ -47,8 +49,8 @@
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "js-tinyapi": "^0.1.0-alpha.4",
-    "jsdom": "^8.5.0",
-    "jsdom-global": "^1.7.0",
+    "jsdom": "^11.7.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^3.2.0",
     "mock-css-modules": "^1.0.0",
     "mock-local-storage": "^1.0.5",
@@ -57,6 +59,7 @@
     "peer-deps-externals-webpack-plugin": "^1.0.2",
     "react": "^16.2.0",
     "react-addons-test-utils": "^0.14.8",
+    "react-dom": "^16.3.1",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
@@ -68,6 +71,7 @@
     "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
     "redux-saga-test-plan": "^2.4.3",
+    "redux-test-utils": "^0.2.2",
     "sinon": "^4.4.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
@@ -86,5 +90,8 @@
     "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
     "uuid": "^2.0.3"
+  },
+  "dependencies": {
+    "enzyme-adapter-react-16": "^1.1.1"
   }
 }
