--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "redux-jam",
-  "version": "0.1.0-alpha.6",
-  "description": "A Redux JSON-API model layer.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/uptick/redux-jam.git"
-  },
+  "name": "js-jam",
+  "version": "0.0.1",
+  "description": "A set of utilities for conveniently working with JSON-API data.",
+  "esnext": "src/index.js",
   "main": "lib/index.js",
   "scripts": {
     "build": "webpack --mode development --progress --colors",
     "watch": "webpack --mode development --progress --colors --watch",
     "build:prod": "webpack --mode production --progress --colors",
     "watch:prod": "webpack --mode production --progress --colors --watch",
-    "test": "mocha --require babel-polyfill --require mock-local-storage --compilers js:babel-register -R nyan --recursive tests/*.js",
-    "test:one": "mocha --require babel-polyfill --require mock-local-storage --compilers js:babel-register -R nyan",
-    "prepublish": "webpack --mode production --progress --colors"
+    "test": "mocha --require babel-polyfill --compilers js:babel-register -R nyan --recursive tests/*.js",
+    "test:one": "mocha --require babel-polyfill --compilers js:babel-register -R nyan"
   },
-  "author": "Luke Hodkinson",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uptick/jam.git"
+  },
+  "author": "Uptick Pty Ltd",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
@@ -27,13 +27,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.19",
     "code": "^5.2.0",
-    "css-loader": "^0.23.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-redux": "^0.2.1",
     "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-standard-react": "^5.0.0",
@@ -44,52 +39,17 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "immutable": "^3.8.2",
-    "is-callable": "^1.1.3",
-    "isomorphic-fetch": "^2.2.1",
-    "js-cookie": "^2.2.0",
-    "js-tinyapi": "^0.1.0-alpha.4",
-    "jsdom": "^11.7.0",
-    "jsdom-global": "^3.0.2",
     "mocha": "^3.2.0",
-    "mock-css-modules": "^1.0.0",
-    "mock-local-storage": "^1.0.5",
     "moment": "^2.21.0",
-    "nock": "^9.0.2",
     "peer-deps-externals-webpack-plugin": "^1.0.2",
-    "react": "^16.2.0",
-    "react-addons-test-utils": "^0.14.8",
-    "react-dom": "^16.3.1",
-    "react-hot-loader": "^1.3.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-devtools": "^3.1.1",
-    "redux-devtools-chart-monitor": "^1.4.1",
-    "redux-devtools-diff-monitor": "^5.0.5",
-    "redux-devtools-dock-monitor": "^1.1.0",
-    "redux-devtools-log-monitor": "^1.0.5",
-    "redux-persist": "^5.9.1",
-    "redux-saga": "^0.16.0",
-    "redux-saga-test-plan": "^2.4.3",
-    "redux-test-utils": "^0.2.2",
     "sinon": "^4.4.2",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
     "uuid": "^2.0.3",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   },
   "peerDependencies": {
-    "immutable": "^3.8.2",
-    "is-callable": "^1.1.3",
-    "js-tinyapi": "^0.1.0-alpha.4",
-    "react": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-persist": "^5.9.1",
-    "redux-saga": "^0.16.0",
+    "moment": "^2.21.0",
     "uuid": "^2.0.3"
   },
   "dependencies": {
