--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A set of utilities for conveniently working with JSON-API data.",
   "esnext": "src/index.js",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "webpack --mode development --progress --colors",
     "watch": "webpack --mode development --progress --colors --watch",
