--- a/package.json
+++ b/package.json
@@ -40,18 +40,20 @@
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^3.2.0",
-    "moment": "^2.21.0",
     "peer-deps-externals-webpack-plugin": "^1.0.2",
     "sinon": "^4.4.2",
-    "uuid": "^2.0.3",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   },
   "peerDependencies": {
+    "js-tinyapi": "^0.2.0",
     "moment": "^2.21.0",
     "uuid": "^2.0.3"
   },
   "dependencies": {
+    "js-tinyapi": "^0.2.0",
+    "moment": "^2.21.0",
+    "uuid": "^2.0.3"
   }
 }
